2006-12-19  Vlad Seryakov  <seryakov@users.sf.net>

	* nsdb/dbtcl.c: Removed extra definition of ns_getcsv command

2006-12-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/Makefile:
	* nsd/nsd.h:
	* nsd/progress.c:
	* nsd/driver.c:
	* nsd/nsconf.c:
	* nsd/tclcmds.c:
	* tests/progress.test:
	* tests/test.nscfg: Move the large file upload progress tracker
	from driver.c into it's own file. Config knob is now:
	ns/parameters:progressminsize and works for both conventional and
	spooled uploads.

	* nsd/sls.c: Fix bug resizing memory for new sls slots.

2006-12-13  Vlad Seryakov  <seryakov@users.sf.net>

        * configure.in:
        * nsd/fastpath.c:
        * nsd/driver.c:
        * nsd/adpeval.c:
        * nsd/tclmisc.c:
        * nsd/tclcmds.c:
        * nsd/nsd.h: Added option to configure --disable-tclvfs which
        makes the server to use native system calls instead of Tcl VFS layer.
        Introduces several internal functions nsFastXXX which implement open, read,
        write, stat, close operations. Most of them are defines, open and stat are
        C wrapper functions. Testing showed 30% speed increase in serving static
        files using fatspath with native system calls. Same goes for adp reading.
        By default Tcl VFS is compiled in.

        Added new command ns_filestat as a fast version of file stat in case when Tcl
        VFS is not compiled in.

	* tcl/file.tcl: Optimized Tcl file handler, smaller and simpler now

2006-12-11  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/file.tcl: Split into separate cache and coookie procs, runs faster

        * nsd.nsd.h:
        * nsd/driver.c:
        * sample-config.tcl.in:
        * nsd-config.tcl: Added optional parameter to drivers "acceptsize" that
        is 1 by default, if set to higher number it will tell the driver to
        accept more than one request, which as tests showed helps to process
        more requests, because if we have many sockets in the driver's queue it takes